<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
   android:padding="@dimen/activity_horizontal_margin"
   tools:context=".ui.SettingsActivity">

   <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_units"
      android:textSize="16sp"
      android:textStyle="bold"/>

   <RadioGroup
      android:id="@+id/unitsRadioGroup"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp">

      <RadioButton
         android:id="@+id/imperialRadioButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
         android:text="@string/units_imperial"
         android:textSize="16sp"/>

      <RadioButton
         android:id="@+id/metricRadioButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
         android:text="@string/units_metric"
         android:textSize="16sp"/>
   </RadioGroup>
</LinearLayout>
