<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
   android:id="@+id/swipeRefreshLayout"
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".ui.TodayFragment">

   <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

         <TextView
            android:id="@+id/offlineBanner"
            style="@style/OfflineBanner"/>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
               android:id="@+id/cityTextView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:textStyle="bold"/>

            <TextView
               android:id="@+id/regionTextView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/textSecondary"
               android:textSize="14sp"/>

            <TextView
               android:id="@+id/errorTextView"
               style="@style/MessageText"
               android:layout_marginTop="@dimen/activity_vertical_margin"
               android:visibility="gone"/>

            <LinearLayout
               android:id="@+id/weatherContent"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:visibility="gone">

               <TextView
                  android:id="@+id/updatedTextView"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/textSecondary"
                  android:textSize="14sp"/>

               <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/activity_vertical_margin"
                  android:gravity="center_vertical"
                  android:orientation="horizontal">

                  <TextView
                     android:id="@+id/iconTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="64sp"/>

                  <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/activity_horizontal_margin"
                     android:layout_weight="1"
                     android:orientation="vertical">

                     <TextView
                        android:id="@+id/temperatureTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="48sp"/>

                     <TextView
                        android:id="@+id/descriptionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>

                     <TextView
                        android:id="@+id/feelsLikeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textSecondary"
                        android:textSize="14sp"/>
                  </LinearLayout>

                  <Button
                     android:id="@+id/favoriteButton"
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
               </LinearLayout>

               <!-- details: two rows of two label/value cells -->
               <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/activity_vertical_margin"
                  android:orientation="horizontal">

                  <LinearLayout style="@style/DetailCell">
                     <TextView style="@style/DetailLabel"
                        android:text="@string/label_humidity"/>
                     <TextView android:id="@+id/humidityTextView"
                        style="@style/DetailValue"/>
                  </LinearLayout>

                  <LinearLayout style="@style/DetailCell">
                     <TextView style="@style/DetailLabel"
                        android:text="@string/label_wind"/>
                     <TextView android:id="@+id/windTextView"
                        style="@style/DetailValue"/>
                  </LinearLayout>
               </LinearLayout>

               <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="8dp"
                  android:orientation="horizontal">

                  <LinearLayout style="@style/DetailCell">
                     <TextView style="@style/DetailLabel"
                        android:text="@string/label_sunrise"/>
                     <TextView android:id="@+id/sunriseTextView"
                        style="@style/DetailValue"/>
                  </LinearLayout>

                  <LinearLayout style="@style/DetailCell">
                     <TextView style="@style/DetailLabel"
                        android:text="@string/label_sunset"/>
                     <TextView android:id="@+id/sunsetTextView"
                        style="@style/DetailValue"/>
                  </LinearLayout>
               </LinearLayout>

               <TextView
                  style="@style/ChartTitle"
                  android:text="@string/chart_hourly_title"/>

               <com.rezashahwaz.skycast.view.SimpleChartView
                  android:id="@+id/hourlyChart"
                  style="@style/Chart"/>
            </LinearLayout>
         </LinearLayout>
      </LinearLayout>
   </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
